# Alphabeter

./: .gitignore  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
Extension/: README.md  manifest.json
Extension/background/: background.js
Extension/lib/: sync.js  utils.js
Extension/pages/: connected.html
Extension/popup/: interface.html
alphabeter/: __init__.py  alphabeter.py  cli.py  errors.py  globals.py
alphabeter/apis/: accounts.py  calendar.py  clientauthconfig.py  digitalassetslinks.py  drive.py  fireconsolepa.py  geolocation.py  identitytoolkit.py  mobilesdk.py  peoplepa.py  playgames.py  playgateway.py  vision.py
alphabeter/helpers/: auth.py  banner.py  calendar.py  drive.py  gcp.py  gmaps.py  ia.py  iam.py  knowledge.py  listener.py  playgames.py  utils.py
alphabeter/modules/: drive.py  email.py  gaia.py  geolocate.py  login.py  spiderdal.py
alphabeter/objects/: apis.py  base.py  encoders.py  session.py  utils.py
alphabeter/parsers/: calendar.py  clientauthconfig.py  digitalassetslinks.py  drive.py  geolocate.py  identitytoolkit.py  mobilesdk.py  people.py  playgames.py  playgateway.py  vision.py
examples/: email_registered.py  get_people_name.py
